Change Store and Book_Detail and Book_Page import

--- a/Instagram Sidebar Coding/Feed.html
+++ b/Instagram Sidebar Coding/Feed.html
@@ -46,7 +46,7 @@
           </span>
         </button>
 
-        <button>
+        <button onclick="location.href='./Feed.html'">
         <span>
           <img class="logo-img" src="img/feed_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
 
@@ -132,7 +132,7 @@
             </div>
 
             <div class="w-1/4 content-center flex items-center justify-center my-2">
-                <img class="object-contain rounded-md w-full md:w-4/5" src="img/Book_template.jpg" alt="Book"/>
+                <img class="object-contain rounded-md w-full md:w-4/5" src="https://cdn.shopify.com/s/files/1/0613/7030/2681/products/212206efffac7d87f8d2a9dc50933b82_473x637.png?v=1672105246" alt="Book"/>
             </div>
 
         </div>
@@ -162,7 +162,7 @@
                 </div>
             </div>
             <div class="bg-[#7EB3BF] rounded-lg col-span-2 grid grid-cols-3 gap-4 px-6 py-4 ml-20">
-                <img class="object-contain rounded-lg m-4" src="img/Book_template.jpg" alt="Book"/>
+                <img class="object-contain rounded-lg m-4" src="https://cdn.shopify.com/s/files/1/0613/7030/2681/products/212206efffac7d87f8d2a9dc50933b82_473x637.png?v=1672105246" alt="Book"/>
                 <div class="grid grid-rows-4 col-span-2 text-white m-4 gap-2">
                     <div class="text-lg">
                         鈴芽之旅
