--- a/Instagram Sidebar Coding/index.html
+++ b/Instagram Sidebar Coding/index.html
@@ -48,7 +48,7 @@
           </span>
         </button>
 
-        <button>
+        <button onclick="location.href='./Feed.html'">
         <span>
           <img class="logo-img" src="img/feed_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
 
