--- a/Instagram Sidebar Coding/Feed.html
+++ b/Instagram Sidebar Coding/Feed.html
@@ -17,6 +17,29 @@
     <script src="./scripts/jquery-3.6.4.min.js"></script>
     <script src="./scripts/store.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script type="module">
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.21.0/firebase-app.js";
+        import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.21.0/firebase-analytics.js";
+        // TODO: Add SDKs for Firebase products that you want to use
+        // https://firebase.google.com/docs/web/setup#available-libraries
+
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        const firebaseConfig = {
+            apiKey: "AIzaSyCVj-HTDHOy1UrFDP18kaXMPeCmAUxmZBI",
+            authDomain: "librarybar-56ac7.firebaseapp.com",
+            projectId: "librarybar-56ac7",
+            storageBucket: "librarybar-56ac7.appspot.com",
+            messagingSenderId: "1036473997162",
+            appId: "1:1036473997162:web:29d782c89ce63d6971f713",
+            measurementId: "G-JK670ND3P7"
+        };
+
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const analytics = getAnalytics(app);
+    </script>
 
     <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"/>
