--- a/Instagram Sidebar Coding/Profile.html
+++ b/Instagram Sidebar Coding/Profile.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <!--  網頁標題  -->
-    <title>Library Bar</title>
+    <title>Library Feed</title>
 
     <!-- 載入 lib -->
     <script src="./scripts/bootstrap.bundle.min.js"></script>
@@ -27,7 +27,55 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet">
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
-
+          <style>
+            .grid-container {
+              display: grid;
+              grid-template-columns: 50px auto;
+              padding: 10px;
+            }
+            .grid-item {
+              padding: 2px;
+              font-size: 25px;
+              text-align: center;
+            }
+            #DIV1{
+              width:250px;
+              height:130px;
+              margin:10px 10px 10px 20px;
+              padding:10px;
+              margin-right:10px;
+              border-radius: 1.5rem;
+              background-color: #8695b6;
+              float:left;
+            }
+            #DIV2{
+              width:250px;
+              height:130px;
+              margin:10px 10px 10px 20px;
+              padding:10px 10px 10px 10px;
+              border-radius: 1.5rem;
+              background-color: #40361e;
+              color: white;
+              float:left;
+            }
+            #DIV3{
+              width:250px;
+              height:130px;
+              margin:10px 10px 10px 20px;
+              padding:10px 10px 10px 10px;
+              border-radius: 1.5rem;
+              background-color: #114632;
+              color: white;
+              float:left;
+            }
+            #DIV4{
+              width:250px;
+              height:130px;
+              margin:10px 10px 10px 20px;
+              border-radius: 1.5rem;
+              float:left;
+            }
+            </style>
 </head>
 
 <body>
@@ -41,9 +89,7 @@
 
         <button>
         <span>
-          <!--            <i class="uil uil-search"></i>-->
           <img class="logo-img" src="img/search_FILL0_wght400_GRAD0_opsz48.svg" alt="Search Logo"/>
-
               <span>Search</span>
           </span>
         </button>
@@ -64,7 +110,7 @@
         </span>
         </button>
 
-        <button>
+        <button onclick="location.href='./Profile.html'">
         <span>
           <img class="logo-img" src="img/face_5_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
 
@@ -118,7 +164,39 @@
 
 <!-- 網頁右側內容 -->
 <div class="main">
+        <div  class="bg-[#262626] rounded-lg" style="height: 500px;">
+            <div class="p-7 text-center" style="width: 200px;">
+                <img src="./img/Avatar.png" style=" margin:auto">
+                <span class="text-white">王曉明</span>
+            </div>
+            <div id="DIV1">
+                  <div class="grid-container">
+                  <div class="grid-item"><img src="./img/watch time.png" width="90%"></div>
+                  <div class="grid-item">2 小時 30 分</div>
+                  </div>
+                  <p>觀看時間</p> 
+            </div>
+            <div id="DIV2">
+              <div class="grid-container">
+              <div class="grid-item"><img src="./img/watch books.png" width="90%"></div>
+              <div class="grid-item">5 / 12 本</div>
+              </div>
+              <p>已觀看書籍</p> 
+            </div>
+            <div id="DIV3">
+              <div class="grid-container">
+              <div class="grid-item"><img src="./img/achievement.png" width="90%"></div>
+              <div class="grid-item">1 / 30 個</div>
+              </div>
+              <p>成就</p> 
+            </div>
+            <div id="DIV4">
+              <button type="button" style="width:250px;height:130px;"><img src="./img/exhibit.png" width="150%"></button>
+            </div>
+        </div>
 </div>
 
+
 </body>
+
 </html>
