--- a/Instagram Sidebar Coding/Feed.html
+++ b/Instagram Sidebar Coding/Feed.html
@@ -149,7 +149,7 @@
                     十七歲的少女鈴芽和阿姨住在九州靜謐的海港城鎮。某天上學途中，鈴芽與一名俊美的青年擦身而過。想要前往「廢墟」的青年，說著他在「尋找門」。鈴芽追著他，來到了山中的廢墟，在那裡的只有一扇陳舊的白門，
                 </div>
 
-                <div class="bg-white hover:bg-slate-200 w-48 h-12 py-2 px-4 rounded-full text-center text-lg flex items-center justify-center cursor-pointer select-none">
+                <div onclick="location.href='./book_page.html'" class="bg-white hover:bg-slate-200 w-48 h-12 py-2 px-4 rounded-full text-center text-lg flex items-center justify-center cursor-pointer select-none">
                     閱讀
                 </div>
             </div>
@@ -197,7 +197,7 @@
                         從遇見尋找著「門」的青年那一刻起，踏上不可思議的神祕旅程。
                     </div>
                     <div class=" grid place-items-end">
-                        <div class="bg-white hover:bg-slate-200 w-24 h-12 py-2 px-4 rounded-full text-black text-center text-base flex items-center justify-center cursor-pointer select-none">
+                        <div onclick="location.href='./book_page.html'" class="bg-white hover:bg-slate-200 w-24 h-12 py-2 px-4 rounded-full text-black text-center text-base flex items-center justify-center cursor-pointer select-none">
                             閱讀
                         </div>
                     </div>
