Change readme、feed、store、template import

--- a/hosting/pages/feed/index.html
+++ b/hosting/pages/feed/index.html
@@ -32,87 +32,53 @@
 
 <body>
 
-<aside class="sidebar">
-    <!--    <header class="sidebar-header">-->
-    <!--        <img class="logo-img" src="img/LibraryBarLogo.jpg" alt="Library Bar Logo"/>-->
-    <!--        <i class="logo-icon uil uil-instagram"></i>-->
-    <!--    </header>-->
-    <nav>
+    <aside class="sidebar">
+        
+        <nav>
 
-        <button>
-        <span>
-          <img class="logo-img" src="../../img/search_FILL0_wght400_GRAD0_opsz48.svg" alt="Search Logo"/>
-              <span>Search</span>
-          </span>
-        </button>
+            <button>
+                <span>
+                    <img class="logo-img" src="../../img/search_FILL0_wght400_GRAD0_opsz48.svg" alt="Search Logo"/>
+                        <span>Search</span>
+                </span>
+            </button>
 
-        <button onclick="location.href='#'">
-        <span>
-          <img class="logo-img" src="../../img/feed_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
+            <button onclick="location.href='../feed/index.html'">
+                <span>
+                    <img class="logo-img" src="../../img/feed_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
+                        <span>Feed</span>
+                </span>
+            </button>
 
-          <span>Feed</span>
-        </span>
-        </button>
+            <button onclick="location.href='../store/index.html'">
+                <span>
+                    <img class="logo-img" src="../../img/store_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
+                        <span>Store</span>
+                </span>
+            </button>
 
-        <button onclick="location.href='./store'">
-        <span>
-          <img class="logo-img" src="../../img/store_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
+            <button>
+                <span>
+                    <img class="logo-img" src="../../img/face_5_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
+                        <span>Profile</span>
+                </span>
+            </button>
 
-          <span>Store</span>
-        </span>
-        </button>
-
-        <button>
-        <span>
-          <img class="logo-img" src="../../img/face_5_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
-
-          <span>Profile</span>
-        </span>
-        </button>
-
-        <button>
-          <span>
-            <img class="logo-img" src="../../img/book_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
-
-          <span>Bookshelf</span>
-        </span>
-        </button>
-
-        <!--        <button>-->
-        <!--          <span>-->
-        <!--            <i class="uil uil-location-arrow">-->
-        <!--              <span>12</span>-->
-        <!--            </i>-->
-        <!--            <span>Bookshelf</span>-->
-        <!--          </span>-->
-        <!--        </button>-->
-
-        <!--        <button>-->
-        <!--          <span>-->
-        <!--            <i class="uil uil-heart">-->
-        <!--              <em></em>-->
-        <!--            </i>-->
-        <!--            <span>Notifications</span>-->
-        <!--          </span>-->
-        <!--        </button>-->
-
-        <!--        <button>-->
-        <!--          <span>-->
-        <!--            <i class="uil uil-plus-circle"> </i>-->
-        <!--            <span>Create</span>-->
-        <!--          </span>-->
-        <!--        </button>-->
-
-
-        <button>
-          <span>
-            <img class="logo-img" src="../../img/tune_FILL0_wght400_GRAD0_opsz48.svg" alt="Setting Logo"/>
-
-            <span>Settings</span>
-          </span>
-        </button>
-    </nav>
-</aside>
+            <button>
+                <span>
+                    <img class="logo-img" src="../../img/book_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
+                        <span>Bookshelf</span>
+                </span>
+            </button>
+            <!--  -->
+            <button>
+                <span>
+                    <img class="logo-img" src="../../img/tune_FILL0_wght400_GRAD0_opsz48.svg" alt="Setting Logo"/>
+                        <span>Settings</span>
+                </span>
+            </button>
+        </nav>
+    </aside>
 
 <!-- 網頁右側內容 -->
 <div class="main">
@@ -126,7 +92,7 @@
                     十七歲的少女鈴芽和阿姨住在九州靜謐的海港城鎮。某天上學途中，鈴芽與一名俊美的青年擦身而過。想要前往「廢墟」的青年，說著他在「尋找門」。鈴芽追著他，來到了山中的廢墟，在那裡的只有一扇陳舊的白門，
                 </div>
 
-                <div onclick="location.href='./book_page.html'"
+                <div onclick="location.href='../readbook/index.html'"
                      class="bg-white hover:bg-slate-200 w-48 h-12 py-2 px-4 rounded-full text-center text-lg flex items-center justify-center cursor-pointer select-none">
                     閱讀
                 </div>
@@ -179,7 +145,7 @@
                         從遇見尋找著「門」的青年那一刻起，踏上不可思議的神祕旅程。
                     </div>
                     <div class=" grid place-items-end">
-                        <div onclick="location.href='./book_page.html'"
+                        <div onclick="location.href='../readbook/index.html'"
                              class="bg-white hover:bg-slate-200 w-24 h-12 py-2 px-4 rounded-full text-black text-center text-base flex items-center justify-center cursor-pointer select-none">
                             閱讀
                         </div>
