--- a/hosting/pages/store/index.html
+++ b/hosting/pages/store/index.html
@@ -27,55 +27,54 @@
 </head>
 
 <body>
-<aside class="sidebar">
-    <nav>
-        <button>
-        <span>
-          <img class="logo-img" src="../../img/search_FILL0_wght400_GRAD0_opsz48.svg" alt="Search Logo"/>
+    
+    <aside class="sidebar">
+        
+        <nav>
 
-          <span>Search</span>
-        </span>
-        </button>
+            <button>
+                <span>
+                    <img class="logo-img" src="../../img/search_FILL0_wght400_GRAD0_opsz48.svg" alt="Search Logo"/>
+                        <span>Search</span>
+                </span>
+            </button>
 
-        <button onclick="location.href='./feed'">
-        <span>
-          <img class="logo-img" src="../../img/feed_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
+            <button onclick="location.href='../feed/index.html'">
+                <span>
+                    <img class="logo-img" src="../../img/feed_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
+                        <span>Feed</span>
+                </span>
+            </button>
 
-          <span>Feed</span>
-        </span>
-        </button>
+            <button onclick="location.href='../store/index.html'">
+                <span>
+                    <img class="logo-img" src="../../img/store_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
+                        <span>Store</span>
+                </span>
+            </button>
 
-        <button onclick="location.href='#'">
-        <span>
-          <img class="logo-img" src="../../img/store_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
-          <span>Store</span>
-        </span>
-        </button>
+            <button>
+                <span>
+                    <img class="logo-img" src="../../img/face_5_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
+                        <span>Profile</span>
+                </span>
+            </button>
 
-        <button>
-        <span>
-          <img class="logo-img" src="../../img/face_5_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
-
-          <span>Profile</span>
-        </span>
-        </button>
-
-        <button>
-        <span>
-          <img class="logo-img" src="../../img/book_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
-
-          <span>Bookshelf</span>
-        </span>
-        </button>
-        <button>
-        <span>
-          <img class="logo-img" src="../../img/tune_FILL0_wght400_GRAD0_opsz48.svg" alt="Setting Logo"/>
-
-          <span>Settings</span>
-        </span>
-        </button>
-    </nav>
-</aside>
+            <button>
+                <span>
+                    <img class="logo-img" src="../../img/book_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
+                        <span>Bookshelf</span>
+                </span>
+            </button>
+            <!--  -->
+            <button>
+                <span>
+                    <img class="logo-img" src="../../img/tune_FILL0_wght400_GRAD0_opsz48.svg" alt="Setting Logo"/>
+                        <span>Settings</span>
+                </span>
+            </button>
+        </nav>
+    </aside>
 
 
 <div class="container-body">
@@ -96,7 +95,7 @@
                             <p>
                                 從遇見尋找著「門」的青年那一刻起，踏上不可思議的神祕旅程。十七歲的少女鈴芽和阿姨住在九州靜謐的海港城鎮。某天上學途中，鈴芽與一名俊美的青年擦身而過。想要前往「廢墟」的青年，說著他在「尋找門」。鈴芽追著他，來到了山中的廢墟，在那裡的只有一扇陳舊的白門，彷彿遭逢崩壞，而被獨自遺留下來。彷彿被某種東西吸引般，鈴芽朝著門，伸出手──</p>
                         </div>
-                        <button onclick="location.href='./readbook'" class="button white-button">閱讀</button>
+                        <button onclick="location.href='../readbook/index.html'" class="button white-button">閱讀</button>
                         <button class="material-symbols-outlined">bookmark</button>
                         <button class="material-symbols-outlined"
                                 onclick=" window.open('https://www.instagram.com/','_blank')">share
@@ -120,7 +119,7 @@
                             <p>
                                 從遇見尋找著「門」的青年那一刻起，踏上不可思議的神祕旅程。十七歲的少女鈴芽和阿姨住在九州靜謐的海港城鎮。某天上學途中，鈴芽與一名俊美的青年擦身而過。想要前往「廢墟」的青年，說著他在「尋找門」。鈴芽追著他，來到了山中的廢墟，在那裡的只有一扇陳舊的白門，彷彿遭逢崩壞，而被獨自遺留下來。彷彿被某種東西吸引般，鈴芽朝著門，伸出手──</p>
                         </div>
-                        <button onclick="location.href='./book_page.html'" class="button white-button">閱讀</button>
+                        <button onclick="location.href='../readbook/index.html'" class="button white-button">閱讀</button>
                         <button class="material-symbols-outlined">bookmark</button>
                         <button class="material-symbols-outlined"
                                 onclick=" window.open('https://www.instagram.com/','_blank')">share
@@ -226,7 +225,7 @@
 <!-- book_detail -->
 <div id="page_book_detail">
     <!-- load css -->
-    <link href="../../style/book_detail.css" rel="stylesheet">
+    <link href="../../src/style/book_detail.css" rel="stylesheet">
     <!-- button關閉按鈕 -->
     <button class="material-symbols-outlined" id="btn_close_book_detail">close</button>
     <!-- load script -->
@@ -716,7 +715,7 @@
 </body
 >
 <!-- <div id="page_local_book">
-    <link href="./style/book_page.css" rel="stylesheet">
+    <link href="../../src/style/book_page.css" rel="stylesheet">
 
     <button class="material-symbols-outlined" id="btn_close_local_book">close</button>
 
