Change feed、Settings、store import

--- a/hosting/pages/store/index.html
+++ b/hosting/pages/store/index.html
@@ -34,7 +34,7 @@
 
     <aside class="sidebar">
         <nav>
-            <button>
+            <button onclick="location.href='../Search/index.html'">
                 <span>
                     <img class="logo-img" src="../../img/search_FILL0_wght400_GRAD0_opsz48.svg" alt="Search Logo" />
 
@@ -42,7 +42,7 @@
                 </span>
             </button>
 
-            <button onclick="location.href='./feed'">
+            <button onclick="location.href='../Feed/index.html'">
                 <span>
                     <img class="logo-img" src="../../img/feed_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo" />
 
@@ -50,30 +50,30 @@
                 </span>
             </button>
 
-            <button onclick="location.href='#'">
+            <button onclick="location.href='../Store/index.html'">
                 <span>
-                    <img class="logo-img" src="../../img/store_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo" />
+                    <img class="logo-img" src="../../img/store_FILL0_wght400_GRAD0_opsz48.svg" alt="Store Logo" />
                     <span>Store</span>
                 </span>
             </button>
 
-            <button>
+            <button onclick="location.href='../Profile/index.html'">
                 <span>
-                    <img class="logo-img" src="../../img/face_5_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo" />
+                    <img class="logo-img" src="../../img/face_5_FILL0_wght400_GRAD0_opsz48.svg" alt="Profile Logo" />
 
                     <span>Profile</span>
                 </span>
             </button>
-            <button>
+            <button onclick="location.href='../Bookshelf/index.html'">
                 <span>
-                    <img class="logo-img" src="../../img/book_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo" />
+                    <img class="logo-img" src="../../img/book_FILL0_wght400_GRAD0_opsz48.svg" alt="Bookshelf Logo" />
 
                     <span>Bookshelf</span>
                 </span>
             </button>
-            <button>
+            <button onclick="location.href='../Settings/index.html'">
                 <span>
-                    <img class="logo-img" src="../../img/tune_FILL0_wght400_GRAD0_opsz48.svg" alt="Setting Logo" />
+                    <img class="logo-img" src="../../img/tune_FILL0_wght400_GRAD0_opsz48.svg" alt="Settings Logo" />
                     <span>Settings</span>
                 </span>
             </button>
@@ -100,7 +100,7 @@
                             <div class="bg-gradient-to-b from-gray-500 to-[#D8CCAE] inline-block text-transparent bg-clip-text text-base">
                                 <p>從遇見尋找著「門」的青年那一刻起，踏上不可思議的神祕旅程。十七歲的少女鈴芽和阿姨住在九州靜謐的海港城鎮。某天上學途中，鈴芽與一名俊美的青年擦身而過。想要前往「廢墟」的青年，說著他在「尋找門」。鈴芽追著他，來到了山中的廢墟，在那裡的只有一扇陳舊的白門，彷彿遭逢崩壞，而被獨自遺留下來。彷彿被某種東西吸引般，鈴芽朝著門，伸出手──</p>
                             </div>
-                            <button onclick="location.href='./readbook'" class="button white-button">閱讀</button>
+                            <button onclick="location.href='../Readbook/index.html'" class="button white-button">閱讀</button>
                             <button class="material-symbols-outlined">bookmark</button>
                             <button class="material-symbols-outlined" onclick=" window.open('https://www.instagram.com/','_blank')">share </button>
                         </div>
@@ -919,7 +919,7 @@
                             <p>
                                 從遇見尋找著「門」的青年那一刻起，踏上不可思議的神祕旅程。十七歲的少女鈴芽和阿姨住在九州靜謐的海港城鎮。某天上學途中，鈴芽與一名俊美的青年擦身而過。想要前往「廢墟」的青年，說著他在「尋找門」。鈴芽追著他，來到了山中的廢墟，在那裡的只有一扇陳舊的白門，彷彿遭逢崩壞，而被獨自遺留下來。彷彿被某種東西吸引般，鈴芽朝著門，伸出手──</p>
                         </div>
-                        <button onclick="location.href='../readbook/index.html'" class="button white-button">閱讀</button>
+                        <button onclick="location.href='../Readbook/index.html'" class="button white-button">閱讀</button>
                         <button class="material-symbols-outlined">bookmark</button>
                         <button class="material-symbols-outlined"
                                 onclick=" window.open('https://www.instagram.com/','_blank')">share
@@ -943,7 +943,7 @@
                             <p>
                                 從遇見尋找著「門」的青年那一刻起，踏上不可思議的神祕旅程。十七歲的少女鈴芽和阿姨住在九州靜謐的海港城鎮。某天上學途中，鈴芽與一名俊美的青年擦身而過。想要前往「廢墟」的青年，說著他在「尋找門」。鈴芽追著他，來到了山中的廢墟，在那裡的只有一扇陳舊的白門，彷彿遭逢崩壞，而被獨自遺留下來。彷彿被某種東西吸引般，鈴芽朝著門，伸出手──</p>
                         </div>
-                        <button onclick="location.href='../readbook/index.html'" class="button white-button">閱讀</button>
+                        <button onclick="location.href='../Readbook/index.html'" class="button white-button">閱讀</button>
                         <button class="material-symbols-outlined">bookmark</button>
                         <button class="material-symbols-outlined"
                                 onclick=" window.open('https://www.instagram.com/','_blank')">share
