--- a/hosting/pages/feed/index.html
+++ b/hosting/pages/feed/index.html
@@ -33,49 +33,48 @@
 <body>
 
     <aside class="sidebar">
-        
-
         <nav>
-
-            <button>
+            <button onclick="location.href='../Search/index.html'">
                 <span>
-                    <img class="logo-img" src="../../img/search_FILL0_wght400_GRAD0_opsz48.svg" alt="Search Logo"/>
-                        <span>Search</span>
+                    <img class="logo-img" src="../../img/search_FILL0_wght400_GRAD0_opsz48.svg" alt="Search Logo" />
+
+                    <span>Search</span>
                 </span>
             </button>
 
-            <button onclick="location.href='../feed/index.html'">
+            <button onclick="location.href='../Feed/index.html'">
                 <span>
-                    <img class="logo-img" src="../../img/feed_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
-                        <span>Feed</span>
+                    <img class="logo-img" src="../../img/feed_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo" />
+
+                    <span>Feed</span>
                 </span>
             </button>
 
-            <button onclick="location.href='../store/index.html'">
+            <button onclick="location.href='../Store/index.html'">
                 <span>
-                    <img class="logo-img" src="../../img/store_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
-                        <span>Store</span>
+                    <img class="logo-img" src="../../img/store_FILL0_wght400_GRAD0_opsz48.svg" alt="Store Logo" />
+                    <span>Store</span>
                 </span>
             </button>
 
-            <button>
+            <button onclick="location.href='../Profile/index.html'">
                 <span>
-                    <img class="logo-img" src="../../img/face_5_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
-                        <span>Profile</span>
-                </span>
-            </button>
+                    <img class="logo-img" src="../../img/face_5_FILL0_wght400_GRAD0_opsz48.svg" alt="Profile Logo" />
 
-            <button>
-                <span>
-                    <img class="logo-img" src="../../img/book_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
-                        <span>Bookshelf</span>
+                    <span>Profile</span>
                 </span>
             </button>
-            <!--  -->
-            <button>
+            <button onclick="location.href='../Bookshelf/index.html'">
                 <span>
-                    <img class="logo-img" src="../../img/tune_FILL0_wght400_GRAD0_opsz48.svg" alt="Setting Logo"/>
-                        <span>Settings</span>
+                    <img class="logo-img" src="../../img/book_FILL0_wght400_GRAD0_opsz48.svg" alt="Bookshelf Logo" />
+
+                    <span>Bookshelf</span>
+                </span>
+            </button>
+            <button onclick="location.href='../Settings/index.html'">
+                <span>
+                    <img class="logo-img" src="../../img/tune_FILL0_wght400_GRAD0_opsz48.svg" alt="Settings Logo" />
+                    <span>Settings</span>
                 </span>
             </button>
         </nav>
