--- a/hosting/pages/Profile/index.html
+++ b/hosting/pages/Profile/index.html
@@ -33,84 +33,50 @@
 
 <body>
 
-<aside class="sidebar">
-    <!--    <header class="sidebar-header">-->
-    <!--        <img class="logo-img" src="img/LibraryBarLogo.jpg" alt="Library Bar Logo"/>-->
-    <!--        <i class="logo-icon uil uil-instagram"></i>-->
-    <!--    </header>-->
+  <aside class="sidebar">
+        
     <nav>
 
-        <button>
-        <span>
-          <img class="logo-img" src="../../img/search_FILL0_wght400_GRAD0_opsz48.svg" alt="Search Logo"/>
-              <span>Search</span>
-          </span>
+        <button onclick="location.href='../Search/index.html'">
+            <span>
+                <img class="logo-img" src="../../img/search_FILL0_wght400_GRAD0_opsz48.svg" alt="Search Logo"/>
+                    <span>Search</span>
+            </span>
         </button>
 
-        <button onclick="location.href='./feed'">
-        <span>
-          <img class="logo-img" src="../../img/feed_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
-
-          <span>Feed</span>
-        </span>
+        <button onclick="location.href='../feed/index.html'">
+            <span>
+                <img class="logo-img" src="../../img/feed_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
+                    <span>Feed</span>
+            </span>
         </button>
 
-        <button onclick="location.href='./store'">
-        <span>
-          <img class="logo-img" src="../../img/store_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
-
-          <span>Store</span>
-        </span>
+        <button onclick="location.href='../store/index.html'">
+            <span>
+                <img class="logo-img" src="../../img/store_FILL0_wght400_GRAD0_opsz48.svg" alt="Store Logo"/>
+                    <span>Store</span>
+            </span>
         </button>
 
-        <button>
-        <span>
-          <img class="logo-img" src="../../img/face_5_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
-
-          <span>Profile</span>
-        </span>
+        <button onclick="location.href='../Profile/index.html'">
+            <span>
+                <img class="logo-img" src="../../img/face_5_FILL0_wght400_GRAD0_opsz48.svg" alt="Profile Logo"/>
+                    <span>Profile</span>
+            </span>
         </button>
 
-        <button>
-          <span>
-            <img class="logo-img" src="../../img/book_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
-
-          <span>Bookshelf</span>
-        </span>
+        <button onclick="location.href='../Bookshelf/index.html'">
+            <span>
+                <img class="logo-img" src="../../img/book_FILL0_wght400_GRAD0_opsz48.svg" alt="Bookshelf Logo"/>
+                    <span>Bookshelf</span>
+            </span>
         </button>
-
-        <!--        <button>-->
-        <!--          <span>-->
-        <!--            <i class="uil uil-location-arrow">-->
-        <!--              <span>12</span>-->
-        <!--            </i>-->
-        <!--            <span>Bookshelf</span>-->
-        <!--          </span>-->
-        <!--        </button>-->
-
-        <!--        <button>-->
-        <!--          <span>-->
-        <!--            <i class="uil uil-heart">-->
-        <!--              <em></em>-->
-        <!--            </i>-->
-        <!--            <span>Notifications</span>-->
-        <!--          </span>-->
-        <!--        </button>-->
-
-        <!--        <button>-->
-        <!--          <span>-->
-        <!--            <i class="uil uil-plus-circle"> </i>-->
-        <!--            <span>Create</span>-->
-        <!--          </span>-->
-        <!--        </button>-->
-
-
-        <button>
-          <span>
-            <img class="logo-img" src="../../img/tune_FILL0_wght400_GRAD0_opsz48.svg" alt="Setting Logo"/>
-
-            <span>Settings</span>
-          </span>
+        <!--  -->
+        <button onclick="location.href='../Settings/index.html'">
+            <span>
+                <img class="logo-img" src="../../img/tune_FILL0_wght400_GRAD0_opsz48.svg" alt="Settings Logo"/>
+                    <span>Settings</span>
+            </span>
         </button>
     </nav>
 </aside>
