Change Search import

--- a/hosting/pages/Search/index.html
+++ b/hosting/pages/Search/index.html
@@ -27,55 +27,53 @@
 </head>
 
 <body>
-<aside class="sidebar">
-    <nav>
-        <button>
-        <span>
-          <img class="logo-img" src="../../img/search_FILL0_wght400_GRAD0_opsz48.svg" alt="Search Logo"/>
+    <aside class="sidebar">
+        
+        <nav>
 
-          <span>Search</span>
-        </span>
-        </button>
+            <button onclick="location.href='../Search/index.html'">
+                <span>
+                    <img class="logo-img" src="../../img/search_FILL0_wght400_GRAD0_opsz48.svg" alt="Search Logo"/>
+                        <span>Search</span>
+                </span>
+            </button>
 
-        <button onclick="location.href='./feed'">
-        <span>
-          <img class="logo-img" src="../../img/feed_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
+            <button onclick="location.href='../feed/index.html'">
+                <span>
+                    <img class="logo-img" src="../../img/feed_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
+                        <span>Feed</span>
+                </span>
+            </button>
 
-          <span>Feed</span>
-        </span>
-        </button>
+            <button onclick="location.href='../store/index.html'">
+                <span>
+                    <img class="logo-img" src="../../img/store_FILL0_wght400_GRAD0_opsz48.svg" alt="Store Logo"/>
+                        <span>Store</span>
+                </span>
+            </button>
 
-        <button onclick="location.href='./store'">
-        <span>
-          <img class="logo-img" src="../../img/store_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
-          <span>Store</span>
-        </span>
-        </button>
+            <button onclick="location.href='../Profile/index.html'">
+                <span>
+                    <img class="logo-img" src="../../img/face_5_FILL0_wght400_GRAD0_opsz48.svg" alt="Profile Logo"/>
+                        <span>Profile</span>
+                </span>
+            </button>
 
-        <button>
-        <span>
-          <img class="logo-img" src="../../img/face_5_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
-
-          <span>Profile</span>
-        </span>
-        </button>
-
-        <button>
-        <span>
-          <img class="logo-img" src="../../img/book_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
-
-          <span>Bookshelf</span>
-        </span>
-        </button>
-        <button>
-        <span>
-          <img class="logo-img" src="../../img/tune_FILL0_wght400_GRAD0_opsz48.svg" alt="Setting Logo"/>
-
-          <span>Settings</span>
-        </span>
-        </button>
-    </nav>
-</aside>
+            <button onclick="location.href='../Bookshelf/index.html'">
+                <span>
+                    <img class="logo-img" src="../../img/book_FILL0_wght400_GRAD0_opsz48.svg" alt="Bookshelf Logo"/>
+                        <span>Bookshelf</span>
+                </span>
+            </button>
+            <!--  -->
+            <button onclick="location.href='../Settings/index.html'">
+                <span>
+                    <img class="logo-img" src="../../img/tune_FILL0_wght400_GRAD0_opsz48.svg" alt="Settings Logo"/>
+                        <span>Settings</span>
+                </span>
+            </button>
+        </nav>
+    </aside>
 
 
 <div class="container-body">
