--- a/hosting/pages/Bookshelf/index.html
+++ b/hosting/pages/Bookshelf/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Store</title>
 
-    <link href="../../style/bootstrap.min.css" rel="stylesheet">
-    <script type="module" src="../../scripts/bootstrap.bundle.min.js"></script>
-    <script type="module" src="../../scripts/popper.min.js"></script>
-    <script type="module" src="../../scripts/bootstrap.min.js"></script>
-    <script type="module" src="../../scripts/jquery-3.6.4.min.js"></script>
-    <script type="module" src="../../scripts/store.js"></script>
+    <link href="../../src/style/bootstrap.min.css" rel="stylesheet">
+    <script type="module" src="../../src/scripts/bootstrap.bundle.min.js"></script>
+    <script type="module" src="../../src/scripts/popper.min.js"></script>
+    <script type="module" src="../../src/scripts/bootstrap.min.js"></script>
+    <script type="module" src="../../src/scripts/jquery-3.6.4.min.js"></script>
+    <script type="module" src="../../src/scripts/store.js"></script>
 
     <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"/>
-    <link href="../../style/style.css" rel="stylesheet">
+    <link href="../../src/style/style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet">
