--- a/hosting/pages/feed/index.html
+++ b/hosting/pages/feed/index.html
@@ -20,8 +20,8 @@
 
     <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"/>
-    <link href="../../style/bootstrap.min.css" rel="stylesheet">
-    <link href="../../style/style.css" rel="stylesheet">
+    <link href="../../src/style/bootstrap.min.css" rel="stylesheet">
+    <link href="../../src/style/style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet">
@@ -83,7 +83,7 @@
 <!-- 網頁右側內容 -->
 <div class="main">
     <div class="flex flex-col space-y-4">
-        <div class="flex bg-[#D8CCAE] rounded-lg p-4 max-h-96">
+        <div class="flex bg-[#D8CCAE] rounded-lg p-4 max-h-96 w-fit h-fit">
 
             <div class="w-3/4 p-4 grid grid-cols-1 gap-4 content-normal">
                 <div class="text-2xl font-semibold">繼續閱讀：鈴芽之旅</div>
