--- a/hosting/pages/Profile/index.html
+++ b/hosting/pages/Profile/index.html
@@ -20,9 +20,9 @@
 
     <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"/>
-    <link href="../../style/bootstrap.min.css" rel="stylesheet">
-    <link href="../../style/style.css" rel="stylesheet">
-    <link href="../../style/profile.css" rel="stylesheet">
+    <link href="../../src/style/bootstrap.min.css" rel="stylesheet">
+    <link href="../../src/style/style.css" rel="stylesheet">
+    <link href="../../src/style/profile.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet">
