--- a/hosting/pages/store/index.html
+++ b/hosting/pages/store/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Store</title>
 
-    <link href="../../style/bootstrap.min.css" rel="stylesheet">
-    <script type="module" src="../../scripts/bootstrap.bundle.min.js"></script>
-    <script type="module" src="../../scripts/popper.min.js"></script>
-    <script type="module" src="../../scripts/bootstrap.min.js"></script>
-    <script type="module" src="../../scripts/jquery-3.6.4.min.js"></script>
-    <script type="module" src="../../scripts/store.js"></script>
+    <link href="../../src/style/bootstrap.min.css" rel="stylesheet">
+    <script type="module" src="../../src/scripts/bootstrap.bundle.min.js"></script>
+    <script type="module" src="../../src/scripts/popper.min.js"></script>
+    <script type="module" src="../../src/scripts/bootstrap.min.js"></script>
+    <script type="module" src="../../src/scripts/jquery-3.6.4.min.js"></script>
+    <script type="module" src="../../src/scripts/store.js"></script>
 
     <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"/>
-    <link href="../../style/style.css" rel="stylesheet">
+    <link href="../../src/style/style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet">
@@ -27,7 +27,9 @@
 </head>
 
 <body>
-    
+    <script src="https://www.gstatic.com/firebasejs/8.3.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.3.0/firebase-firestore.js"></script>
+    <script src="../../src/scripts/firebase.js"></script>
     <aside class="sidebar">
         
         <nav>
@@ -79,51 +81,57 @@
 
 <div class="container-body">
     <div class="recommend-carousel">
-        <div class="recommend-carousel-inner">
+        <div class="recommend-carousel-inner" id="recommend_book">
 
             <div class="recommend-carousel-item active">
                 <div class="recommend-carousel-item-content-head">
-                    <div class="recommend-carousel-item-content-img"><img
-                            src="https://cdn.shopify.com/s/files/1/0613/7030/2681/products/212206efffac7d87f8d2a9dc50933b82_473x637.png?v=1672105246">
+                    <div class="recommend-carousel-item-content-img">
+                        <img src="https://cdn.shopify.com/s/files/1/0613/7030/2681/products/212206efffac7d87f8d2a9dc50933b82_473x637.png?v=1672105246">
                     </div>
-                    <div class="recommend-carousel-item-content-title"><p>推薦書籍</p></div>
+                    <div class="recommend-carousel-item-content-title">
+                        <p>推薦書籍</p>
+                    </div>
                     <div class="recommend-carousel-item-content">
                         <p1>鈴芽之旅</p1>
+                        <br>
                         <u>新海城</u>
-                        <p2> ☆ 4.0</p2>
-                        <div class="bg-gradient-to-b from-gray-500 to-[#D8CCAE] inline-block text-transparent bg-clip-text text-base">
-                            <p>
-                                從遇見尋找著「門」的青年那一刻起，踏上不可思議的神祕旅程。十七歲的少女鈴芽和阿姨住在九州靜謐的海港城鎮。某天上學途中，鈴芽與一名俊美的青年擦身而過。想要前往「廢墟」的青年，說著他在「尋找門」。鈴芽追著他，來到了山中的廢墟，在那裡的只有一扇陳舊的白門，彷彿遭逢崩壞，而被獨自遺留下來。彷彿被某種東西吸引般，鈴芽朝著門，伸出手──</p>
+                        <!-- <p2> ☆ 4.0</p2> -->
+                        <br>
+                        <div class="material-symbols-outlined">
+                            <button onclick="location.href='../readbook/index.html'" class="button white-button">閱讀</button>
+                            <button>bookmark</button>
+                            <button onclick=" window.open('https://www.instagram.com/','_blank')">share </button>
                         </div>
-                        <button onclick="location.href='../readbook/index.html'" class="button white-button">閱讀</button>
-                        <button class="material-symbols-outlined">bookmark</button>
-                        <button class="material-symbols-outlined"
-                                onclick=" window.open('https://www.instagram.com/','_blank')">share
-                        </button>
-
+                        <br>
+                        <div class="h-12 bg-gradient-to-b from-gray-500 to-[#D8CCAE] inline-block text-transparent bg-clip-text text-base">
+                            <p>從遇見尋找著「門」的青年那一刻起，踏上不可思議的神祕旅程。十七歲的少女鈴芽和阿姨住在九州靜謐的海港城鎮。某天上學途中，鈴芽與一名俊美的青年擦身而過。想要前往「廢墟」的青年，說著他在「尋找門」。鈴芽追著他，來到了山中的廢墟，在那裡的只有一扇陳舊的白門，彷彿遭逢崩壞，而被獨自遺留下來。彷彿被某種東西吸引般，鈴芽朝著門，伸出手──</p>
+                        </div>
                     </div>
                 </div>
 
             </div>
             <div class="recommend-carousel-item active">
                 <div class="recommend-carousel-item-content-head">
-                    <div class="recommend-carousel-item-content-img"><img
-                            src="https://cdn.shopify.com/s/files/1/0613/7030/2681/products/212206efffac7d87f8d2a9dc50933b82_473x637.png?v=1672105246">
+                    <div class="recommend-carousel-item-content-img">
+                        <img src="https://cdn.shopify.com/s/files/1/0613/7030/2681/products/212206efffac7d87f8d2a9dc50933b82_473x637.png?v=1672105246">
                     </div>
-                    <div class="recommend-carousel-item-content-title"><p>推薦書籍</p></div>
+                    <div class="recommend-carousel-item-content-title">
+                        <p>推薦書籍</p>
+                    </div>
                     <div class="recommend-carousel-item-content">
                         <p1>鈴芽之旅</p1>
                         <u>新海城</u>
-                        <p2> ☆ 4.0</p2>
-                        <div class="bg-gradient-to-b from-gray-500 to-[#D8CCAE] inline-block text-transparent bg-clip-text text-base">
-                            <p>
-                                從遇見尋找著「門」的青年那一刻起，踏上不可思議的神祕旅程。十七歲的少女鈴芽和阿姨住在九州靜謐的海港城鎮。某天上學途中，鈴芽與一名俊美的青年擦身而過。想要前往「廢墟」的青年，說著他在「尋找門」。鈴芽追著他，來到了山中的廢墟，在那裡的只有一扇陳舊的白門，彷彿遭逢崩壞，而被獨自遺留下來。彷彿被某種東西吸引般，鈴芽朝著門，伸出手──</p>
+                        <!-- <p2> ☆ 4.0</p2> -->
+                        <br>
+                        <div class="material-symbols-outlined">
+                            <button onclick="location.href='../readbook/index.html'" class="button white-button">閱讀</button>
+                            <button>bookmark</button>
+                            <button onclick=" window.open('https://www.instagram.com/','_blank')">share </button>
                         </div>
-                        <button onclick="location.href='../readbook/index.html'" class="button white-button">閱讀</button>
-                        <button class="material-symbols-outlined">bookmark</button>
-                        <button class="material-symbols-outlined"
-                                onclick=" window.open('https://www.instagram.com/','_blank')">share
-                        </button>
+                        <br>
+                        <div class="h-40 bg-gradient-to-b from-gray-500 to-[#D8CCAE] inline-block text-transparent bg-clip-text text-justify">
+                            <p>從遇見尋找著「門」的青年那一刻起，踏上不可思議的神祕旅程。十七歲的少女鈴芽和阿姨住在九州靜謐的海港城鎮。某天上學途中，鈴芽與一名俊美的青年擦身而過。想要前往「廢墟」的青年，說著他在「尋找門」。鈴芽追著他，來到了山中的廢墟，在那裡的只有一扇陳舊的白門，彷彿遭逢崩壞，而被獨自遺留下來。彷彿被某種東西吸引般，鈴芽朝著門，伸出手──</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -134,49 +142,50 @@
     <span>綜合排名</span>
     <hr>
 
-    <div class="row">
+    <div class="row" id="store_ranking">
         <div class="col-sm">
             <div id="btn_reading_book_detail" class="store-ranking-content">
                 <img src="https://cdn.shopify.com/s/files/1/0613/7030/2681/products/212206efffac7d87f8d2a9dc50933b82_473x637.png?v=1672105246">
-                <span class="store-ranking-conten-span">鈴芽之旅</span>
-                <p>新海城</p>
             </div>
+            <span class="store-ranking-conten-span">鈴芽之旅</span>
+            <p>新海城</p>
         </div>
         <div class="col-sm">
             <div id="btn_reading_book_detail" class="store-ranking-content">
                 <img src="https://cdn.shopify.com/s/files/1/0613/7030/2681/products/212206efffac7d87f8d2a9dc50933b82_473x637.png?v=1672105246">
-                <span class="store-ranking-conten-span">鈴芽之旅</span>
-                <p>新海城</p>
             </div>
+            <span class="store-ranking-conten-span">鈴芽之旅</span>
+            <p>新海城</p>
         </div>
         <div class="col-sm">
             <div id="btn_reading_book_detail" class="store-ranking-content">
                 <img src="https://cdn.shopify.com/s/files/1/0613/7030/2681/products/212206efffac7d87f8d2a9dc50933b82_473x637.png?v=1672105246">
-                <span class="store-ranking-conten-span">鈴芽之旅</span>
-                <p>新海城</p>
             </div>
+            <span class="store-ranking-conten-span">鈴芽之旅</span>
+            <p>新海城</p>
         </div>
         <div class="col-sm">
             <div id="btn_reading_book_detail" class="store-ranking-content">
                 <img src="https://cdn.shopify.com/s/files/1/0613/7030/2681/products/212206efffac7d87f8d2a9dc50933b82_473x637.png?v=1672105246">
-                <span class="store-ranking-conten-span">鈴芽之旅</span>
-                <p>新海城</p>
             </div>
+            <span class="store-ranking-conten-span">鈴芽之旅</span>
+            <p>新海城</p>
         </div>
         <div class="col-sm">
             <div id="btn_reading_book_detail" class="store-ranking-content">
                 <img src="https://cdn.shopify.com/s/files/1/0613/7030/2681/products/212206efffac7d87f8d2a9dc50933b82_473x637.png?v=1672105246">
-                <span class="store-ranking-conten-span">鈴芽之旅</span>
-                <p>新海城</p>
             </div>
+            <span class="store-ranking-conten-span">鈴芽之旅</span>
+            <p>新海城</p>
         </div>
         <div class="col-sm">
             <div id="btn_reading_book_detail" class="store-ranking-content">
                 <img src="https://cdn.shopify.com/s/files/1/0613/7030/2681/products/212206efffac7d87f8d2a9dc50933b82_473x637.png?v=1672105246">
-                <span class="store-ranking-conten-span">鈴芽之旅</span>
-                <p>新海城</p>
             </div>
+            <span class="store-ranking-conten-span">鈴芽之旅</span>
+            <p>新海城</p>
         </div>
+
     </div>
 
     <span>分類</span>
@@ -229,7 +238,7 @@
     <!-- button關閉按鈕 -->
     <button class="material-symbols-outlined" id="btn_close_book_detail">close</button>
     <!-- load script -->
-    <script type="module" src="../../scripts/book_detail.js"></script>
+    <script type="module" src="../../src/scripts/book_detail.js"></script>
 
 
     <div class="flex flex-col relative">
