修好store第一次無法載入問題

--- a/hosting/pages/store/index.html
+++ b/hosting/pages/store/index.html
@@ -82,59 +82,7 @@
 <div class="container-body">
     <div class="recommend-carousel">
         <div class="recommend-carousel-inner" id="recommend_book">
-
-            <div class="recommend-carousel-item active">
-                <div class="recommend-carousel-item-content-head">
-                    <div class="recommend-carousel-item-content-img">
-                        <img src="https://cdn.shopify.com/s/files/1/0613/7030/2681/products/212206efffac7d87f8d2a9dc50933b82_473x637.png?v=1672105246">
-                    </div>
-                    <div class="recommend-carousel-item-content-title">
-                        <p>推薦書籍</p>
-                    </div>
-                    <div class="recommend-carousel-item-content">
-                        <p1>鈴芽之旅</p1>
-                        <br>
-                        <u>新海城</u>
-                        <!-- <p2> ☆ 4.0</p2> -->
-                        <br>
-                        <div class="material-symbols-outlined">
-                            <button onclick="location.href='../readbook/index.html'" class="button white-button">閱讀</button>
-                            <button>bookmark</button>
-                            <button onclick=" window.open('https://www.instagram.com/','_blank')">share </button>
-                        </div>
-                        <br>
-                        <div class="h-12 bg-gradient-to-b from-gray-500 to-[#D8CCAE] inline-block text-transparent bg-clip-text text-base">
-                            <p>從遇見尋找著「門」的青年那一刻起，踏上不可思議的神祕旅程。十七歲的少女鈴芽和阿姨住在九州靜謐的海港城鎮。某天上學途中，鈴芽與一名俊美的青年擦身而過。想要前往「廢墟」的青年，說著他在「尋找門」。鈴芽追著他，來到了山中的廢墟，在那裡的只有一扇陳舊的白門，彷彿遭逢崩壞，而被獨自遺留下來。彷彿被某種東西吸引般，鈴芽朝著門，伸出手──</p>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-            <div class="recommend-carousel-item active">
-                <div class="recommend-carousel-item-content-head">
-                    <div class="recommend-carousel-item-content-img">
-                        <img src="https://cdn.shopify.com/s/files/1/0613/7030/2681/products/212206efffac7d87f8d2a9dc50933b82_473x637.png?v=1672105246">
-                    </div>
-                    <div class="recommend-carousel-item-content-title">
-                        <p>推薦書籍</p>
-                    </div>
-                    <div class="recommend-carousel-item-content">
-                        <p1>鈴芽之旅</p1>
-                        <u>新海城</u>
-                        <!-- <p2> ☆ 4.0</p2> -->
-                        <br>
-                        <div class="material-symbols-outlined">
-                            <button onclick="location.href='../readbook/index.html'" class="button white-button">閱讀</button>
-                            <button>bookmark</button>
-                            <button onclick=" window.open('https://www.instagram.com/','_blank')">share </button>
-                        </div>
-                        <br>
-                        <div class="h-40 bg-gradient-to-b from-gray-500 to-[#D8CCAE] inline-block text-transparent bg-clip-text text-justify">
-                            <p>從遇見尋找著「門」的青年那一刻起，踏上不可思議的神祕旅程。十七歲的少女鈴芽和阿姨住在九州靜謐的海港城鎮。某天上學途中，鈴芽與一名俊美的青年擦身而過。想要前往「廢墟」的青年，說著他在「尋找門」。鈴芽追著他，來到了山中的廢墟，在那裡的只有一扇陳舊的白門，彷彿遭逢崩壞，而被獨自遺留下來。彷彿被某種東西吸引般，鈴芽朝著門，伸出手──</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <!--自動加載-->
 
         </div>
     </div>
@@ -142,92 +90,15 @@
     <span>綜合排名</span>
     <hr>
 
-    <div class="row" id="store_ranking">
-        <div class="col-sm">
-            <div id="btn_reading_book_detail" class="store-ranking-content">
-                <img src="https://cdn.shopify.com/s/files/1/0613/7030/2681/products/212206efffac7d87f8d2a9dc50933b82_473x637.png?v=1672105246">
-            </div>
-            <span class="store-ranking-conten-span">鈴芽之旅</span>
-            <p>新海城</p>
-        </div>
-        <div class="col-sm">
-            <div id="btn_reading_book_detail" class="store-ranking-content">
-                <img src="https://cdn.shopify.com/s/files/1/0613/7030/2681/products/212206efffac7d87f8d2a9dc50933b82_473x637.png?v=1672105246">
-            </div>
-            <span class="store-ranking-conten-span">鈴芽之旅</span>
-            <p>新海城</p>
-        </div>
-        <div class="col-sm">
-            <div id="btn_reading_book_detail" class="store-ranking-content">
-                <img src="https://cdn.shopify.com/s/files/1/0613/7030/2681/products/212206efffac7d87f8d2a9dc50933b82_473x637.png?v=1672105246">
-            </div>
-            <span class="store-ranking-conten-span">鈴芽之旅</span>
-            <p>新海城</p>
-        </div>
-        <div class="col-sm">
-            <div id="btn_reading_book_detail" class="store-ranking-content">
-                <img src="https://cdn.shopify.com/s/files/1/0613/7030/2681/products/212206efffac7d87f8d2a9dc50933b82_473x637.png?v=1672105246">
-            </div>
-            <span class="store-ranking-conten-span">鈴芽之旅</span>
-            <p>新海城</p>
-        </div>
-        <div class="col-sm">
-            <div id="btn_reading_book_detail" class="store-ranking-content">
-                <img src="https://cdn.shopify.com/s/files/1/0613/7030/2681/products/212206efffac7d87f8d2a9dc50933b82_473x637.png?v=1672105246">
-            </div>
-            <span class="store-ranking-conten-span">鈴芽之旅</span>
-            <p>新海城</p>
-        </div>
-        <div class="col-sm">
-            <div id="btn_reading_book_detail" class="store-ranking-content">
-                <img src="https://cdn.shopify.com/s/files/1/0613/7030/2681/products/212206efffac7d87f8d2a9dc50933b82_473x637.png?v=1672105246">
-            </div>
-            <span class="store-ranking-conten-span">鈴芽之旅</span>
-            <p>新海城</p>
-        </div>
-
+    <div class="row row-cols-sm-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-6 " id="store_ranking">
+            <!--自動加載-->
     </div>
 
     <span>分類</span>
     <hr>
 
-    <div class="row row-cols-6">
-        <div class="col">
-            <button class="button bg-button">人文社會</button>
-        </div>
-        <div class="col">
-            <button class="button bg-button">文學小說</button>
-        </div>
-        <div class="col">
-            <button class="button bg-button">語言學習</button>
-        </div>
-        <div class="col">
-            <button class="button bg-button">財經商管</button>
-        </div>
-        <div class="col">
-            <button class="button bg-button">科學科普</button>
-        </div>
-        <div class="col">
-            <button class="button bg-button">電腦資訊</button>
-        </div>
-        <div class="col">
-            <button class="button bg-button">宗教心靈</button>
-        </div>
-        <div class="col">
-            <button class="button bg-button">醫藥養生</button>
-        </div>
-        <div class="col">
-            <button class="button bg-button">藝術設計</button>
-        </div>
-        <div class="col">
-            <button class="button bg-button">休閒生活</button>
-        </div>
-        <div class="col">
-            <button class="button bg-button">親子童書</button>
-        </div>
-        <div class="col">
-            <button class="button bg-button">考試證照</button>
-        </div>
+    <div class="row row-cols-md-2 row-cols-lg-4 row-cols-xl-6 " id="store_class">
+            <!--自動加載-->
     </div>
 </div>
 
