Change feed import

--- a/hosting/pages/feed/index.html
+++ b/hosting/pages/feed/index.html
@@ -36,42 +36,42 @@
         
         <nav>
 
-            <button onclick="location.href='../Search/index.html'">
+            <button onclick="location.href='../Search/'">
                 <span>
                     <img class="logo-img" src="../../img/search_FILL0_wght400_GRAD0_opsz48.svg" alt="Search Logo"/>
                         <span>Search</span>
                 </span>
             </button>
 
-            <button onclick="location.href='../feed/index.html'">
+            <button onclick="location.href='../feed/'">
                 <span>
                     <img class="logo-img" src="../../img/feed_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
                         <span>Feed</span>
                 </span>
             </button>
 
-            <button onclick="location.href='../store/index.html'">
+            <button onclick="location.href='../store/'">
                 <span>
                     <img class="logo-img" src="../../img/store_FILL0_wght400_GRAD0_opsz48.svg" alt="Store Logo"/>
                         <span>Store</span>
                 </span>
             </button>
 
-            <button onclick="location.href='../Profile/index.html'">
+            <button onclick="location.href='../Profile/'">
                 <span>
                     <img class="logo-img" src="../../img/face_5_FILL0_wght400_GRAD0_opsz48.svg" alt="Profile Logo"/>
                         <span>Profile</span>
                 </span>
             </button>
 
-            <button onclick="location.href='../Bookshelf/index.html'">
+            <button onclick="location.href='../Bookshelf/'">
                 <span>
                     <img class="logo-img" src="../../img/book_FILL0_wght400_GRAD0_opsz48.svg" alt="Bookshelf Logo"/>
                         <span>Bookshelf</span>
                 </span>
             </button>
             <!--  -->
-            <button onclick="location.href='../Settings/index.html'">
+            <button onclick="location.href='../Settings/'">
                 <span>
                     <img class="logo-img" src="../../img/tune_FILL0_wght400_GRAD0_opsz48.svg" alt="Settings Logo"/>
                         <span>Settings</span>
@@ -92,7 +92,7 @@
                     十七歲的少女鈴芽和阿姨住在九州靜謐的海港城鎮。某天上學途中，鈴芽與一名俊美的青年擦身而過。想要前往「廢墟」的青年，說著他在「尋找門」。鈴芽追著他，來到了山中的廢墟，在那裡的只有一扇陳舊的白門，
                 </div>
 
-                <div onclick="location.href='../readbook/index.html'"
+                <div onclick="location.href='../readbook/'"
                      class="bg-white hover:bg-slate-200 w-48 h-12 py-2 px-4 rounded-full text-center text-lg flex items-center justify-center cursor-pointer select-none">
                     閱讀
                 </div>
@@ -110,8 +110,11 @@
         <div class="flex flex-col bg-white rounded-3xl p-12 gap-4">
 
             <div class="flex flex-row gap-4">
-                <div class="flex-none">
-                    <div class="rounded-full w-16 h-16 bg-gray-300"></div>
+                <div>
+                    <img
+                      src="https://storage.googleapis.com/pxcode-pro/644d82b70649a2000afe5491/assets/8b8a920c3d37a86d2cebb867d3453fcc.png"
+                      alt="alt text"
+                    />
                 </div>
                 <div class="flex-1 w-64 ">
                     <div class="grid grid-cols-1 col-start-2 place-items-start content-end items-center m-2">
@@ -134,19 +137,17 @@
                 <img class="object-contain rounded-lg m-4"
                      src="https://cdn.shopify.com/s/files/1/0613/7030/2681/products/212206efffac7d87f8d2a9dc50933b82_473x637.png?v=1672105246"
                      alt="Book"/>
-                <div class="grid grid-rows-4 col-span-2 text-white m-4 gap-2">
-                    <div class="text-lg">
-                        鈴芽之旅
+                <div class="content-normal">
+                    <p1 class="text-[rgb(242,242,242)]">鈴芽之旅</p1>
+                    <br><br>
+                    <u class="text-[rgb(242,242,242)] text-sm">新海 誠</u>
+                    <br><br>
+                    <div class="h-40 bg-gradient-to-b from-gray-500 inline-block text-transparent bg-clip-text text-justify">
+                        <p>十七歲的少女鈴芽和阿姨住在九州靜謐的海港城鎮。某天上學途中，鈴芽與一名俊美的青年擦身而過。想要前往「廢墟」的青年，說著他在「尋找門」。鈴芽追著他，來到了山中的廢墟，在那裡的只有一扇陳舊的白門，</p>
                     </div>
-                    <a class="text-lg">
-                        新海 誠
-                    </a>
-                    <div class="text-sm">
-                        從遇見尋找著「門」的青年那一刻起，踏上不可思議的神祕旅程。
-                    </div>
-                    <div class=" grid place-items-end">
-                        <div onclick="location.href='../readbook/index.html'"
-                             class="bg-white hover:bg-slate-200 w-24 h-12 py-2 px-4 rounded-full text-black text-center text-base flex items-center justify-center cursor-pointer select-none">
+                    <br>
+                    <div class="grid place-items-end">
+                        <div onclick="location.href='../readbook/'" class="bg-white hover:bg-slate-200 w-24 h-12 py-2 px-4 rounded-full text-black text-center text-base flex items-center justify-center cursor-pointer select-none">
                             閱讀
                         </div>
                     </div>
@@ -180,13 +181,19 @@
                     </div>
                 </div>
                 <div class="flex flex-row gap-4 ml-4">
-                    <div class="rounded-full w-6 h-6 bg-gray-300"></div>
+                    <div>
+                        <img
+                          src="https://storage.googleapis.com/pxcode-pro/644d82b70649a2000afe5491/assets/8b8a920c3d37a86d2cebb867d3453fcc.png"
+                          alt="alt text"
+                          class="w-6 h-6"
+                        />
+                    </div>
                     <div class="text-sm">
                         李大華 : 哇~ 太酷了吧！
                     </div>
-                    <span class="material-symbols-outlined h-3 w-3">
-                    reply
-                    </span>
+                    <button onclick=" window.open('https://www.instagram.com/','_blank')" class="material-symbols-outlined h-3 w-3">
+                        reply
+                    </button>
                 </div>
 
             </div>
