Change Settings import

--- a/hosting/pages/Settings/index.html
+++ b/hosting/pages/Settings/index.html
@@ -36,42 +36,42 @@
         
         <nav>
 
-            <button onclick="location.href='../Search/index.html'">
+            <button onclick="location.href='../Search/'">
                 <span>
                     <img class="logo-img" src="../../img/search_FILL0_wght400_GRAD0_opsz48.svg" alt="Search Logo"/>
                         <span>Search</span>
                 </span>
             </button>
 
-            <button onclick="location.href='../feed/index.html'">
+            <button onclick="location.href='../feed/'">
                 <span>
                     <img class="logo-img" src="../../img/feed_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
                         <span>Feed</span>
                 </span>
             </button>
 
-            <button onclick="location.href='../store/index.html'">
+            <button onclick="location.href='../store/'">
                 <span>
                     <img class="logo-img" src="../../img/store_FILL0_wght400_GRAD0_opsz48.svg" alt="Store Logo"/>
                         <span>Store</span>
                 </span>
             </button>
 
-            <button onclick="location.href='../Profile/index.html'">
+            <button onclick="location.href='../Profile/'">
                 <span>
                     <img class="logo-img" src="../../img/face_5_FILL0_wght400_GRAD0_opsz48.svg" alt="Profile Logo"/>
                         <span>Profile</span>
                 </span>
             </button>
 
-            <button onclick="location.href='../Bookshelf/index.html'">
+            <button onclick="location.href='../Bookshelf/'">
                 <span>
                     <img class="logo-img" src="../../img/book_FILL0_wght400_GRAD0_opsz48.svg" alt="Bookshelf Logo"/>
                         <span>Bookshelf</span>
                 </span>
             </button>
             <!--  -->
-            <button onclick="location.href='../Settings/index.html'">
+            <button onclick="location.href='../Settings/'">
                 <span>
                     <img class="logo-img" src="../../img/tune_FILL0_wght400_GRAD0_opsz48.svg" alt="Settings Logo"/>
                         <span>Settings</span>
@@ -113,8 +113,8 @@
         <div style="margin-top: 10px;">
           <span>背景顏色</span>
           <select style="float: right;">
-            <option>暗色</option>
             <option>亮色</option>
+            <option>暗色</option>
         </select>
         </div>
 </div>
