--- a/hosting/pages/Search/index.html
+++ b/hosting/pages/Search/index.html
@@ -87,42 +87,42 @@
 
     <div class="row">
         <div class="col-sm">
-            <div class="store-ranking-content">
+            <div class="object-contain rounded-md w-full md:w-4/5">
                 <img src="https://cdn.shopify.com/s/files/1/0613/7030/2681/products/212206efffac7d87f8d2a9dc50933b82_473x637.png?v=1672105246">
                 <span class="store-ranking-conten-span">鈴芽之旅</span>
                 <p>新海城</p>
             </div>
         </div>
         <div class="col-sm">
-            <div class="store-ranking-content">
+            <div class="object-contain rounded-md w-full md:w-4/5">
                 <img src="https://cdn.shopify.com/s/files/1/0613/7030/2681/products/212206efffac7d87f8d2a9dc50933b82_473x637.png?v=1672105246">
                 <span class="store-ranking-conten-span">鈴芽之旅</span>
                 <p>新海城</p>
             </div>
         </div>
         <div class="col-sm">
-            <div class="store-ranking-content">
+            <div class="object-contain rounded-md w-full md:w-4/5">
                 <img src="https://cdn.shopify.com/s/files/1/0613/7030/2681/products/212206efffac7d87f8d2a9dc50933b82_473x637.png?v=1672105246">
                 <span class="store-ranking-conten-span">鈴芽之旅</span>
                 <p>新海城</p>
             </div>
         </div>
         <div class="col-sm">
-            <div class="store-ranking-content">
+            <div class="object-contain rounded-md w-full md:w-4/5">
                 <img src="https://cdn.shopify.com/s/files/1/0613/7030/2681/products/212206efffac7d87f8d2a9dc50933b82_473x637.png?v=1672105246">
                 <span class="store-ranking-conten-span">鈴芽之旅</span>
                 <p>新海城</p>
             </div>
         </div>
         <div class="col-sm">
-            <div class="store-ranking-content">
+            <div class="object-contain rounded-md w-full md:w-4/5">
                 <img src="https://cdn.shopify.com/s/files/1/0613/7030/2681/products/212206efffac7d87f8d2a9dc50933b82_473x637.png?v=1672105246">
                 <span class="store-ranking-conten-span">鈴芽之旅</span>
                 <p>新海城</p>
             </div>
         </div>
         <div class="col-sm">
-            <div class="store-ranking-content">
+            <div class="object-contain rounded-md w-full md:w-4/5">
                 <img src="https://cdn.shopify.com/s/files/1/0613/7030/2681/products/212206efffac7d87f8d2a9dc50933b82_473x637.png?v=1672105246">
                 <span class="store-ranking-conten-span">鈴芽之旅</span>
                 <p>新海城</p>
